syntax = "proto3";

service PlaylistService {
  rpc GetPlaylists (Empty) returns (PlaylistList);
  rpc GetPlaylistById (PlaylistRequest) returns (PlaylistDetail);
  rpc AddToPlaylist (AddToPlaylistRequest) returns (OperationStatus);
  rpc GetUserPlaylists (UserRequest) returns (PlaylistList);
  rpc CreatePlaylist (CreatePlaylistRequest) returns (CreatePlaylistResponse);
  rpc RemoveTrackFromPlaylist (RemoveTrackRequest) returns (OperationStatus);
  rpc DeletePlaylist (PlaylistRequest) returns (OperationStatus);
}

message Empty {}

message PlaylistRequest {
  string pid = 1;
}

message Playlist {
  string pid = 1;
  string author = 2;
  string author_uid = 3;
  string name = 4;
  string description = 5;
  int64 added = 6;
  int64 liked = 7;
  int64 shared = 8;
  int64 played = 9;
  bool public = 10;
  string image = 11;
  string type = 12;
  string last_update = 13; 
}

message Track {
  string tid = 1;
  int32 order = 2;
}

message PlaylistDetail {
  string pid = 1;
  string name = 2;
  string author = 3;
  string author_uid = 4;
  repeated Track tracks = 5;
}

message PlaylistList {
  repeated Playlist playlists = 1;
  int32 total = 2;
}

message AddToPlaylistRequest {
  string pid = 1;
  string trackId = 2;
}

message UserRequest {
  string uid = 1;
}

message CreatePlaylistRequest {
  string uid = 1;
  string username = 2;
  string name = 3;
  string description = 4;
}

message CreatePlaylistResponse {
  string pid = 1;
}

message RemoveTrackRequest {
  string pid = 1;
  string trackId = 2;
}

message OperationStatus {
  string msg = 1;
  int32 code = 2;
}
