syntax = "proto3";

service AlbumService {
  rpc GetAlbums (Empty) returns (AlbumList);
  rpc GetAlbumById (AlbumRequest) returns (AlbumDetail);
  rpc DeleteAlbum (AlbumRequest) returns (Empty);
}

message Empty {}

message Album {
  string pid = 1;
  string author = 2;
  string author_uid = 3;
  string name = 4;
  string description = 5;
  int64 added = 6;
  int64 liked = 7;
  int64 shared = 8;
  int64 played = 9;
  bool public = 10;
  string image = 11;
  string type = 12;
  string last_update = 13; 
}

message Track {
  string tid = 1;
  int32 order = 2;
}

message AlbumRequest {
  string pid = 1;
}

message AlbumList {
  repeated Album albums = 1;
}

message AlbumDetail {
  string pid = 1;
  string name = 2;
  string author = 3;
  repeated Track tracks = 4;
}
